2016-01-20 Fixed adding class when page score is 100% in Navigation Bar module
2016-01-19 Fixed issue with Keep Original Order mode and dropdowngaps in Text module
2016-01-19 Fixed issue with Source List and Text gaps in Text module
2016-01-18 Fixed issue with double ShowAnswers execution in Multiplegap module
2016-01-18 Added new module Print Report
2016-01-18 Fixed test in LearnPen Report module
2016-01-15 Changed default values of correct range in LearnPen Report module
2016-01-15 Fixed changing module ID
2016-01-14 Fixed issue with show answers and check mode in Text module
2016-01-13 Fixed issue with dragging when check mode is on in Ordering module
2016-01-12 Fixed issue with dragged elements and them scores in MultipleGap module
2016-01-12 Added Blocked Lines property in Point And Lines module
2016-01-11 Added custom event on uncheck in LimitedCheck module
2016-01-11 Added pause command to MultiAudio
2016-01-08 Added property Empty Answer to Math module
2016-01-08 Added graduated score to Ordering module
2016-01-08 Added select and deselect commands in Line Selection module
2016-01-07 Fixed issue with Video on Chrome
2016-01-07 Added isAllOK command to Fractions module
2016-01-07 Added isAllOK command to Graph module
2016-01-05 Fixed problem with MathJax in Table module
2016-01-05 Added horizontal layout property to Choice module
2015-12-23 Fixed problem with reseting visibility in Text Selection module
2015-12-21 Added image modes in Memo Game module
2015-12-18 Fixed problem with stopping audio on mLibro in Audio module
2015-12-17 Fixed error messages in Standard Shapes module
2015-12-16 Fixed tests in Shape Tracing
2015-12-16 Added displaying coordinates in editor in BoardGame, PointsLine, LineSelection, FigureDrawing and ConnectingDots modules
2015-12-15 Fixed issue with slow drawing in Shape Tracing
2015-12-15 Fixed issue with rulers in editor
2015-12-15 Fixed problem withs Show Answers mode in TrueFalse module